--- a/html-files/style.css
+++ b/html-files/style.css
@@ -1,42 +1,45 @@
 body {
-  margin: 0;
+    margin: 0;
 }
 main {
-  width: 800px;
-  margin-left: calc((100% - 800px) / 2);
-  line-height: 1.5;
+    width: 800px;
+    margin-left: calc((100% - 800px) / 2);
+    line-height: 1.2;
 }
 body::before {
-  content: "";
-  background-image: url("../img/pattern.jpg");
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
-  filter: opacity(20%);
-  background-size: cover;
-  background-repeat: repeat;
+    content: "";
+    background-image: url("../img/pattern.jpg");
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    filter: opacity(20%);
+    background-size: cover;
+    background-repeat: repeat;
 }
 .code {
-  color: red;
-  background-color: yellow;
-  font-weight: bold;
+    color: red;
+    background-color: yellow;
+    font-weight: bold;
 }
 
 .tech {
-  color: blue;
-  background-color: yellow;
-  font-weight: bold;
+    color: blue;
+    background-color: yellow;
+    font-weight: bold;
 }
 
 h2 {
-  background-color: rgb(41, 232, 41);
+    background-color: rgb(41, 232, 41);
 }
 a {
-  display: block;
+    display: block;
 }
 p {
-  text-align: justify;
+    text-align: justify;
+}
+.inline {
+    display: inline;
 }
