--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ h2 {
 .youtube {
     display: inline-block;
     color: white;
-    background-color: blue;
+    background-color: grey;
     padding: 5px 15px;
     margin: 10px 5px;
     border-radius: 0.7em;
