--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ h3 {
 .youtube {
     display: inline-block;
     color: white;
-    background-color: grey;
+    background-color: #dc143c88;
     padding: 5px 15px;
     margin: 10px 5px;
     border-radius: 0.7em;
@@ -89,6 +89,25 @@ p {
 .example ul {
     list-style: none;
 }
+.back-to-top {
+    background-color: var(--secondary-color);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 10px;
+    right: 0px;
+    text-decoration: none;
+    color: white;
+    background-color: crimson;
+    font-size: 30px;
+    text-align: center;
+    line-height: 50px;
+    transition: all 0.5s;
+}
+.back-to-top:hover {
+    box-shadow: 0 3px 6px #0005;
+}
 
 @media (max-width: 800px) {
     .container {
@@ -98,5 +117,8 @@ p {
     }
     img {
         width: 100%;
+    }
+    .back-to-top {
+        background-color: #dc143c55;
     }
 }
