--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,15 @@
+:root {
+    --main-width: 800px;
+}
 body *,
 body {
     margin: 0;
     box-sizing: border-box;
 }
 
-/* body::before {
-    content: "";
-    background-image: url("../img/pattern.jpg");
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    filter: opacity(20%);
-    background-size: cover;
-    background-repeat: repeat;
-} */
-
 .container {
-    width: 800px;
-    margin-left: calc((100% - 800px) / 2);
+    width: var(--main-width);
+    margin: 0 calc((100% - var(--main-width)) / 2);
     line-height: 1.2;
     display: inline-block;
 }
@@ -73,6 +62,9 @@ h3 {
     border-radius: 0.7em;
     text-decoration: none;
 }
+.youtube:hover {
+    background-color: #dc143c;
+}
 p {
     text-align: justify;
 }
@@ -89,6 +81,7 @@ p {
 .example ul {
     list-style: none;
 }
+
 .back-to-top {
     background-color: var(--secondary-color);
     width: 50px;
@@ -96,7 +89,8 @@ p {
     border-radius: 50%;
     position: fixed;
     bottom: 10px;
-    right: 0px;
+    right: calc((100% - var(--main-width)) / 2);
+    transform: translateX(100%);
     text-decoration: none;
     color: white;
     background-color: crimson;
@@ -109,6 +103,16 @@ p {
     box-shadow: 0 3px 6px #0005;
 }
 
+
+@media (max-width: 900px) {
+    .back-to-top {
+        background-color: #dc143c55;
+        right: 0;
+        transform: translateX(-50%);
+        
+    }
+    
+}
 @media (max-width: 800px) {
     .container {
         width: 100%;
@@ -118,7 +122,5 @@ p {
     img {
         width: 100%;
     }
-    .back-to-top {
-        background-color: #dc143c55;
-    }
+   
 }
